--- a/src/app.css
+++ b/src/app.css
@@ -12,3 +12,9 @@
 body {
   background-color: #121212;
 }
+
+.rocknroll-one-regular {
+  font-family: "RocknRoll One", serif;
+  font-weight: 400;
+  font-style: normal;
+}
